--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <div id="map"></div>
-    <script type="module" src='app.js'></script>
+    <script type="module" src='main.js'></script>
   </body>
 </html>
