added random colour, infobox and animation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   </head>
   <body>
     <div id="map"></div>
+    <div id="stats-counter" style="position: absolute; top: 10px; left: 10px; color: white; background-color: rgba(0,0,0,0.5); padding: 5px; font-family: monospace;">
+      <div>FPS: 0</div>
+      <div>Center: 0, 0</div>
+      <div>Zoom: 0</div>
+      <div>Pitch: 0°</div>
+      <div>Bearing: 0°</div>
+    </div>
     <script type="module" src='main.js'></script>
   </body>
 </html>
